--- a/index.html
+++ b/index.html
@@ -42,5 +42,31 @@
         <p>&copy; 2025 Miguel</p>
     </footer>
 </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Miguel – Portfolio</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+<body>
+  <header class="hero">
+    <h1 class="title">Port<br>Folio</h1>
+    <p class="subtitle">Miguel – Web, Games & Robotics</p>
+  </header>
 
+  <nav class="main-nav">
+    <a href="index.html">Start</a>
+    <a href="projekte.html">Projekte</a>
+    <a href="kontakt.html">Kontakt</a>
+  </nav>
+
+  <main class="section center">
+    <p>Willkommen auf meinem Portfolio. Hier findest du ausgewählte Projekte aus Webentwicklung, Robotik und Spieleprogrammierung.</p>
+    <p>Ich liebe es, kreative Ideen in Code zu verwandeln egal ob Webseiten, Spiele, Roboter oder Anwendungen.
+In meinem Portfolio findest du genau das: Webdesign, Game-Dev und Projekte aus der Welt der Technik und Robotik.</p>
+</main>
+
+  <footer>
+    <p>&copy; 2025 Miguel</p>
+  </footer>
+</body>
 </html>
