--- a/kontakt.html
+++ b/kontakt.html
@@ -45,3 +45,29 @@
 </body>
 
 </html>
+<head>
+  <meta charset="UTF-8" />
+  <title>Kontakt – Miguel</title>
+  <link rel="stylesheet" href="kontakt.css" />
+</head>
+<body>
+  <header class="hero small">
+    <h1 class="title">Kontakt</h1>
+  </header>
+
+  <nav class="main-nav">
+    <a href="index.html">Start</a>
+    <a href="projekte.html">Projekte</a>
+    <a href="kontakt.html">Kontakt</a>
+  </nav>
+
+  <main class="section center">
+    <p><strong>E-Mail:</strong> <a href="mailto:klick@miguel-dev.de">klick@miguel-dev.de</a></p>
+    <p><strong>GitHub:</strong> <a href="https://github.com/MRdevt-jpg" target="_blank">@MRdevt-jpg</a></p>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Miguel</p>
+  </footer>
+</body>
+</html>
