--- a/projekte.html
+++ b/projekte.html
@@ -48,3 +48,40 @@
 </body>
 
 </html>
+<head>
+  <meta charset="UTF-8" />
+  <title>Projekte – Miguel</title>
+  <link rel="stylesheet" href="projekt.css" />
+</head>
+<body>
+  <header class="hero small">
+    <h1 class="title">Projekte</h1>
+  </header>
+
+  <nav class="main-nav">
+    <a href="index.html">Start</a>
+    <a href="projekte.html">Projekte</a>
+    <a href="kontakt.html">Kontakt</a>
+  </nav>
+
+  <main class="section">
+    <div class="project-grid">
+      <a href="spaceinvader.html" class="project">
+        <img src="Space shooter startseite.png" alt="Space Invader">
+        <h2>Space Invader</h2>
+        <p>Arcade-Game mit HTML, CSS & JavaScript</p>
+      </a>
+
+      <a href="roboter.html" class="project">
+        <img src="img/roboter.jpg" alt="BB8 Roboter">
+        <h2>BB8-Roboter</h2>
+        <p>Arduino + Sprachsteuerung + Sensorik</p>
+      </a>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Miguel</p>
+  </footer>
+</body>
+</html>
