--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Miguel | Meine Projekte</title>
-    <link rel="stylesheet" href="Website-Seite.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <header>
         <h1>Willkommen auf meiner Portfolio-Seite</h1>
         <nav>
-            <a href="Website-Seite.html">Start</a>
+            <a href="index.html">Start</a>
             <a href="projekte.html">Projekte</a>
             <a href="kontakt.html">Kontakt</a>
         </nav>
