--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
         <header>
             <h1>Kontakt</h1>
             <nav>
-                <a href="Website-Seite.html">Start</a>
+                <a href="index.html">Start</a>
                 <a href="projekte.html">Projekte</a>
                 <a href="kontakt.html">Kontakt</a>
             </nav>
