--- a/projekte.html
+++ b/projekte.html
@@ -27,7 +27,7 @@
                     <p>Ein klassisches Space-Shooter-Spiel, entwickelt mit HTML, CSS und jQuery. Du steuerst dein
                         Raumschiff und verteidigst die Erde gegen eine Alien-Invasion.</p>
                     <p><strong>Technologien:</strong> HTML, CSS, JavaScript, jQuery</p>
-                    <a href="spiele/spaceinvader/index.html" target="_blank">Jetzt spielen</a>
+                    <a href="spaceinvader.html" target="_blank">Jetzt spielen</a>
                 </article>
 
 
