--- a/index.html
+++ b/index.html
@@ -1,51 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Miguel | Meine Projekte</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-
-<body>
-    <header>
-        <h1>Willkommen auf meiner Portfolio-Seite</h1>
-        <nav>
-            <a href="index.html">Start</a>
-            <a href="projekte.html">Projekte</a>
-            <a href="kontakt.html">Kontakt</a>
-        </nav>
-    </header>
-
-    <main>
-        <section>
-            <h2></h2>
-            <section>
-                <h2>Über mich</h2>
-                <p>
-                    Hallo! Mein Name ist Miguel – Fachinformatiker mit Leidenschaft für kreative Programmierung, Robotik
-                    und Spieleentwicklung.
-                </p>
-                <p>
-                    Ich liebe es, Ideen in funktionierenden Code zu verwandeln, neue Technologien auszuprobieren und
-                    Projekte von Grund auf selbst zu gestalten. Ob Websites, Automatisierungen, Roboter oder Spiele –
-                    ich lerne ständig dazu und entwickle mich weiter.
-                </p>
-                <p>
-                    Auf dieser Seite findest du eine Auswahl meiner bisherigen Projekte. Viel Spaß beim Durchstöbern –
-                    und wenn du Fragen hast oder mit mir zusammenarbeiten möchtest, melde dich gern!
-                </p>
-            </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Miguel</p>
-    </footer>
-</body>
 <head>
   <meta charset="UTF-8" />
   <title>Miguel – Portfolio</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="hero">
@@ -60,10 +18,8 @@
   </nav>
 
   <main class="section center">
-    <p>Willkommen auf meinem Portfolio. Hier findest du ausgewählte Projekte aus Webentwicklung, Robotik und Spieleprogrammierung.</p>
-    <p>Ich liebe es, kreative Ideen in Code zu verwandeln egal ob Webseiten, Spiele, Roboter oder Anwendungen.
-In meinem Portfolio findest du genau das: Webdesign, Game-Dev und Projekte aus der Welt der Technik und Robotik.</p>
-</main>
+    <p>Willkommen auf meinem Portfolio. Hier findest du ausgewählte Projekte aus Webentwicklung, Robotik und Spieleentwicklung.</p>
+  </main>
 
   <footer>
     <p>&copy; 2025 Miguel</p>
