--- a/projekte.html
+++ b/projekte.html
@@ -1,57 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Projekte – Miguel</title>
-    <link rel="stylesheet" href="projekt.css">
-</head>
-
-<body>
-    <div class="wrapper">
-        <header>
-            <h1>Meine Projekte</h1>
-            <nav>
-                <a href="index.html">Start</a>
-                <a href="projekte.html">Projekte</a>
-                <a href="kontakt.html">Kontakt</a>
-            </nav>
-        </header>
-
-        <main>
-            <section>
-                <h2>Projektübersicht</h2>
-
-                <article>
-                    <h3>Space Invader Game</h3>
-                    <p>Ein klassisches Space-Shooter-Spiel, entwickelt mit HTML, CSS und jQuery. Du steuerst dein
-                        Raumschiff und verteidigst die Erde gegen eine Alien-Invasion.</p>
-                    <p><strong>Technologien:</strong> HTML, CSS, JavaScript, jQuery</p>
-                    <a href="spaceinvader.html" target="_blank">Jetzt spielen</a>
-                </article>
-
-
-                <article>
-                    <h3>Projektname 2</h3>
-                    <p>Beschreibung eines weiteren Projekts.</p>
-                    <p><strong>Technologien:</strong> C, Arduino, Sensorik</p>
-                    <a href="#">Code auf GitHub</a>
-                </article>
-
-            </section>
-        </main>
-
-        <footer>
-            <p>&copy; 2025 Miguel</p>
-        </footer>
-    </div>
-</body>
-
-</html>
 <head>
   <meta charset="UTF-8" />
   <title>Projekte – Miguel</title>
-  <link rel="stylesheet" href="projekt.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="hero small">
@@ -67,7 +19,7 @@
   <main class="section">
     <div class="project-grid">
       <a href="spaceinvader.html" class="project">
-        <img src="Space shooter startseite.png" alt="Space Invader">
+        <img src="img/spaceinvader.jpg" alt="Space Invader">
         <h2>Space Invader</h2>
         <p>Arcade-Game mit HTML, CSS & JavaScript</p>
       </a>
