--- a/spaceinvader.html
+++ b/spaceinvader.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Space Invader – Projekt</title>
-  <link rel="stylesheet" href="spaceinvader.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="hero small">
@@ -17,8 +17,7 @@
   </nav>
 
   <main class="section">
-    <img src="Space shooter startseite.png" alt="Space Invader Vorschau" class="projektbild">
-    <img src="Spaceshooterspielen.png" alt="Space shooter Vorschau" class="projektbild">
+    <img src="img/spaceinvader.jpg" alt="Space Invader Vorschau" class="projektbild">
     <h2>Beschreibung</h2>
     <p>Ein klassisches Arcade-Game, bei dem du die Erde gegen eine Alien-Invasion verteidigst. Entwickelt mit HTML, CSS & JavaScript.</p>
 
@@ -28,7 +27,7 @@
       <li>JavaScript & jQuery</li>
     </ul>
 
-    <p><a href="c:\Users\mr277\OneDrive\Desktop\SCRIPT\Jquery\Projekt\Startseite.html" target="_blank">🎮 Jetzt spielen</a></p>
+    <p><a href="spiele/spaceinvader/index.html" target="_blank">🎮 Jetzt spielen</a></p>
   </main>
 
   <footer>
