--- a/projekte.html
+++ b/projekte.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Projekte – Miguel</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
   <header class="hero small">
@@ -19,7 +19,8 @@
   <main class="section">
     <div class="project-grid">
       <a href="spaceinvader.html" class="project">
-        <img src="img/spaceinvader.jpg" alt="Space Invader">
+        <img src="Space shooter startseite.png" alt="Space Invader">
+        <img src="Spaceshooterspielen.png" alt="Space shooter">
         <h2>Space Invader</h2>
         <p>Arcade-Game mit HTML, CSS & JavaScript</p>
       </a>
