--- a/spaceinvader.html
+++ b/spaceinvader.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Space Invader – Projekt</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
   <header class="hero small">
@@ -27,7 +27,7 @@
       <li>JavaScript & jQuery</li>
     </ul>
 
-    <p><a href="spiele/spaceinvader/index.html" target="_blank">🎮 Jetzt spielen</a></p>
+    <p><a href="Projekt/Startseite.html" target="_blank">🎮 Jetzt spielen</a></p>
   </main>
 
   <footer>
