--- a/projekte.html
+++ b/projekte.html
@@ -19,7 +19,7 @@
   <main class="section">
     <div class="project-grid">
       <a href="spaceinvader.html" class="project">
-        <img src="Space shooter startseite.png" alt="Space Invader">
+        <img src="Projekt/Spielerschiff.png" alt="Space Invader">
         <h2>Space Invader</h2>
         <p>Arcade-Game mit HTML, CSS & JavaScript</p>
       </a>
