--- a/spaceinvader.html
+++ b/spaceinvader.html
@@ -17,7 +17,7 @@
   </nav>
 
   <main class="section">
-    <img src="img/spaceinvader.jpg" alt="Space Invader Vorschau" class="projektbild">
+    <img src="Space shooter startseite.png" alt="Space Invader Vorschau" class="projektbild">
     <img src="Spaceshooterspielen.png" alt="Space Invader Vorschau" class="projektbild">
     <h2>Beschreibung</h2>
     <p>Ein klassisches Arcade-Game, bei dem du die Erde gegen eine Alien-Invasion verteidigst. Entwickelt mit HTML, CSS & JavaScript.</p>
