--- a/projekte.html
+++ b/projekte.html
@@ -19,8 +19,7 @@
   <main class="section">
     <div class="project-grid">
       <a href="spaceinvader.html" class="project">
-        <img src="Projekt/Spielerschiff.png" alt="Space Invader">
-        <h2>Space Invader</h2>
+        <h2>Space Shooter</h2>
         <p>Arcade-Game mit HTML, CSS & JavaScript</p>
       </a>
 
