--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!-- Force rebuild -->
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8" />
   <title>Miguel – Portfolio</title>
   <link rel="stylesheet" href="index.css" />
 </head>
+
 <body>
   <header class="hero">
     <h1 class="title">Port<br>Folio</h1>
@@ -19,11 +21,13 @@
   </nav>
 
   <main class="section center">
-    <p>Willkommen auf meinem Portfolio. Hier findest du ausgewählte Projekte aus Webentwicklung, Robotik und Spieleentwicklung.</p>
+    <p>Willkommen auf meinem Portfolio. Hier findest du ausgewählte Projekte aus Webentwicklung, Robotik und
+      Spieleentwicklung.</p>
   </main>
 
   <footer>
     <p>&copy; 2025 Miguel</p>
   </footer>
 </body>
+
 </html>
