--- a/spaceinvader.html
+++ b/spaceinvader.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8" />
   <title>Space Invader – Projekt</title>
   <link rel="stylesheet" href="index.css" />
 </head>
+
 <body>
   <header class="hero small">
     <h1 class="title">Space Invader</h1>
@@ -20,7 +22,8 @@
     <img src="Space shooter startseite.png" alt="Space Invader Vorschau" class="projektbild">
     <img src="Spaceshooterspielen.png" alt="Space Invader Vorschau" class="projektbild">
     <h2>Beschreibung</h2>
-    <p>Ein klassisches Arcade-Game, bei dem du die Erde gegen eine Alien-Invasion verteidigst. Entwickelt mit HTML, CSS & JavaScript.</p>
+    <p>Ein klassisches Arcade-Game, bei dem du die Erde gegen eine Alien-Invasion verteidigst. Entwickelt mit HTML, CSS
+      & JavaScript.</p>
 
     <h2>Technologien</h2>
     <ul>
@@ -35,4 +38,5 @@
     <p>&copy; 2025 Miguel</p>
   </footer>
 </body>
+
 </html>
