--- a/spaceinvader.html
+++ b/spaceinvader.html
@@ -35,7 +35,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Miguel</p>
+    <p>&copy; 2025 Miguel – <a href="impressum.html">Impressum</a> | <a href="datenschutz.html">Datenschutz</a></p>
   </footer>
 </body>
 
