--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Miguel – <a href="impressum.html">Impressum</a> | <a href="datenschutz.html">Datenschutz</a></p>
+    <p>&copy; 2025 Miguel – <a href="Impressum.html">Impressum</a> | <a href="datenschutz.html">Datenschutz</a></p>
   </footer>
 </body>
 
