--- a/Impressum.html
+++ b/Impressum.html
@@ -21,21 +21,21 @@
       <section>
         <h2>Angaben gemäß § 5 TMG</h2>
         <p>
-          Miguel [Nachname]<br>
-          Musterstraße 1<br>
-          12345 Musterstadt<br>
+          Miguel Rodriguez<br>
+          Alte Reichsstraße 26<br>
+          97318 Kitzingen<br>
           Deutschland
         </p>
 
         <h3>Kontakt</h3>
         <p>
-          Telefon: +49 123 456789<br>
-          E-Mail: kontakt@miguel-dev.de
+          Telefon: +49 15147151394<br>
+          E-Mail: miguel.dev.t0@gmail.com
         </p>
 
         <h3>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h3>
         <p>
-          Miguel [Nachname]<br>
+          Miguel Rodriguez<br>
           Adresse wie oben
         </p>
 
