--- a/datenschutz.html
+++ b/datenschutz.html
@@ -20,33 +20,48 @@
     <main>
       <section>
         <h2>Allgemeine Hinweise</h2>
-        <p>Der Schutz deiner persönlichen Daten ist mir wichtig. Diese Website speichert selbst keine personenbezogenen Daten.</p>
+        <p>Der Schutz deiner persönlichen Daten ist mir wichtig. Diese Website sammelt selbst keine Daten aktiv – dennoch fallen beim Besuch automatisch einige technische Informationen an.</p>
 
-        <h3>Hosting über GitHub Pages</h3>
+        <h2>Verantwortlicher</h2>
         <p>
-          Diese Website wird über GitHub Pages bereitgestellt. Dabei können durch GitHub technische Informationen 
-          (z. B. IP-Adresse, Browsertyp, Zugriffszeitpunkt) in Server-Logfiles gespeichert werden.<br>
-          Weitere Informationen findest du hier:<br>
-          <a href="https://docs.github.com/de/github/site-policy/github-privacy-statement" target="_blank">
-            GitHub Privacy Statement
-          </a>
+          Miguel<br>
+          Website: miguel-dev.de<br>
+          E-Mail: kontakt@miguel-dev.de
+        </p>
+
+        <h2>Welche Daten werden erfasst?</h2>
+        <p>Beim Aufruf dieser Seite können technische Daten wie IP-Adresse, Browsertyp oder Zugriffszeitpunkt automatisch durch den Hostinganbieter gespeichert werden. Diese Infos sind nötig, damit die Seite funktioniert und sicher bleibt.</p>
+
+        <h3>GitHub Pages</h3>
+        <p>
+          Die Seite wird über GitHub Pages bereitgestellt. Dabei kann GitHub Daten wie IP-Adresse und Zeitstempel erfassen und speichern.<br>
+          Mehr dazu hier: <a href="https://docs.github.com/de/github/site-policy/github-privacy-statement" target="_blank">GitHub Privacy Statement</a>
         </p>
 
         <h3>Cloudflare</h3>
         <p>
-          Zum Schutz und zur Beschleunigung der Seite wird Cloudflare verwendet. Cloudflare speichert technische Daten 
-          wie IP-Adressen, um Angriffe abzuwehren.<br>
-          Weitere Infos findest du hier:<br>
-          <a href="https://www.cloudflare.com/privacypolicy/" target="_blank">
-            Cloudflare Datenschutzerklärung
-          </a>
+          Zur Sicherheit (z. B. DDoS-Schutz) und besseren Ladezeit nutze ich Cloudflare. Auch dort können technische Daten wie IP-Adressen verarbeitet werden.<br>
+          Mehr dazu hier: <a href="https://www.cloudflare.com/privacypolicy/" target="_blank">Cloudflare Datenschutzerklärung</a>
         </p>
 
-        <h3>Kontakt</h3>
-        <p>
-          Wenn du Fragen zum Datenschutz hast, schreib mir:<br>
-          E-Mail: kontakt@miguel-dev.de
-        </p>
+        <h2>Deine Rechte</h2>
+        <p>Du hast jederzeit das Recht auf:</p>
+        <ul>
+          <li>Auskunft über deine gespeicherten Daten</li>
+          <li>Löschung oder Berichtigung</li>
+          <li>Einschränkung oder Widerspruch der Verarbeitung</li>
+          <li>Beschwerde bei einer Datenschutzbehörde</li>
+        </ul>
+
+        <h2>Cookies & Tracking</h2>
+        <p>Diese Seite nutzt keine Cookies oder Tracker wie Google Analytics. Du wirst also nicht verfolgt.</p>
+
+        <h2>Kontakt bei Fragen</h2>
+        <p>Wenn du Fragen zum Datenschutz hast oder wissen willst, welche Daten eventuell übermittelt wurden, melde dich gerne:<br>
+        E-Mail: kontakt@miguel-dev.de</p>
+
+        <h2>Letztes Update</h2>
+        <p>Diese Datenschutzerklärung wurde zuletzt im Juli 2025 aktualisiert.</p>
       </section>
     </main>
 
