--- a/kontakt.html
+++ b/kontakt.html
@@ -63,7 +63,7 @@
   </nav>
 
   <main class="section center">
-    <p><strong>E-Mail:</strong> <a href="mailto:klick@miguel-dev.de">klick@miguel-dev.de</a></p>
+    <p><strong>E-Mail:</strong> <a href="mailto: miguel.dev.t0gmail.com">miguel.dev.t0@gmail.com</a></p>
     <p><strong>GitHub:</strong> <a href="https://github.com/MRdevt-jpg" target="_blank">@MRdevt-jpg</a></p>
   </main>
 
