--- a/kontakt.html
+++ b/kontakt.html
@@ -34,7 +34,7 @@
           <button type="submit">Absenden</button>
         </form>
 
-        <p>Oder direkt per Mail: <a href="mailto:miguel@example.com">miguel@example.com</a></p>
+        <p>Oder direkt per Mail: <a href="mailto:miguel.dev.t0@gmail.com">miguel.dev.t0@gmail.com</a></p>
       </section>
     </main>
 
