--- a/Impressum.html
+++ b/Impressum.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Impressum – Miguel</title>
   <link rel="stylesheet" href="Impressum.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
   <div class="wrapper">
