--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Force rebuild -->
 <!DOCTYPE html>
 <html lang="de">
 
@@ -11,7 +10,7 @@
 
 <body>
   <header class="hero">
-    <h1 class="title">Port<br>Folio</h1>
+    <h1 class="title">Port Folio</h1>
     <p class="subtitle">Miguel – Web, Games & Robotics</p>
   </header>
 
@@ -22,7 +21,7 @@
   </nav>
 
   <main class="section center">
-    <h2>Hey, ich bin Miguel – willkommen auf meinem Portfolio</h2>
+    <h2>Hallo, ich bin Miguel – willkommen auf meiner Website</h2>
     <p>
       Ich bin Fachinformatiker für Anwendungsentwicklung mit einer großen Leidenschaft für Webentwicklung, Game Design
       und Robotik.
