--- a/spaceinvader.html
+++ b/spaceinvader.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="hero small">
-    <h1 class="title">Space Invader</h1>
+    <h1 class="title">Space Schooter</h1>
   </header>
 
   <nav class="main-nav">
@@ -34,6 +34,9 @@
     </ul>
 
     <p><a href="Projekt/Startseite.html" target="_blank">🎮 Jetzt spielen</a></p>
+    <div style="margin-top: 2rem;">
+      <a href="projekte.html" class="back-link">← Zurück zu den Projekten</a>
+    </div>
   </main>
 
   <footer>
