--- a/projekte.html
+++ b/projekte.html
@@ -27,8 +27,7 @@
         <p>Arcade-Game mit HTML, CSS & JavaScript</p>
       </a>
 
-      <a href="roboter.html" class="project">
-        <img src="img/roboter.jpg" alt="BB8 Roboter">
+      <a href="BB-8.html" class="project">
         <h2>BB8-Roboter</h2>
         <p>Arduino + Sprachsteuerung + Sensorik</p>
       </a>
