--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
   </nav>
 
   <main class="section center">
-    <h2>Hallo, ich bin Miguel – willkommen auf meiner Website</h2>
+    <h2>Hallo, ich bin Miguel willkommen auf meiner Website</h2>
     <p>
       Ich bin Fachinformatiker für Anwendungsentwicklung mit einer großen Leidenschaft für Webentwicklung, Game Design
       und Robotik.
     </p>
     <p>
-      Was mich antreibt? Neues auszuprobieren, Dinge zum Laufen zu bringen – und dabei immer weiter zu lernen.
+      Was mich antreibt? Neues auszuprobieren, Dinge zum Laufen zu bringen und dabei immer weiter zu lernen.
       Hier auf meiner Seite findest du Projekte, die ich aus Interesse, Neugier oder einfach aus Spaß umgesetzt habe.
-      Manche sind klein, andere aufwendiger – aber in jedem steckt mein Ehrgeiz und meine Begeisterung für Technik.
+      Manche sind klein, andere aufwendiger aber in jedem steckt mein Ehrgeiz und meine Begeisterung für Technik.
     </p>
     <p>
       Ob du dir einen Eindruck von meinen Skills verschaffen willst oder einfach neugierig bist: Schön, dass du da bist.
-      <strong>Wenn du Fragen hast oder mit mir zusammenarbeiten möchtest – schreib mir gern!</strong>
+      <strong>Wenn du Fragen hast oder mit mir zusammenarbeiten möchtest schreib mir gern!</strong>
     </p>
   </main>
 
