--- a/projekte.html
+++ b/projekte.html
@@ -26,10 +26,13 @@
         <h2>Space Shooter</h2>
         <p>Arcade-Game mit HTML, CSS & JavaScript</p>
       </a>
-
       <a href="BB-8.html" class="project">
         <h2>BB8-Roboter</h2>
         <p>Arduino + Sprachsteuerung + Sensorik</p>
+      </a>
+      <a href="orbit-simulator.html" class="project">
+        <h2>Orbit-Simulator</h2>
+        <p>Orbits & Hohmann-Transfer mit Δv-Report und Visualisierung.</p>
       </a>
     </div>
   </main>
